--- a/src/app/features/heroes-management/heroes-listing/heroes-listing-table/heroes-listing-table.component.html
+++ b/src/app/features/heroes-management/heroes-listing/heroes-listing-table/heroes-listing-table.component.html
@@ -1,1 +1,30 @@
-<p>heroes-listing-table works!</p>
+<div class="card hero_table">
+    <div class="card-body">
+        <table class="table table-striped">
+            <thead>
+
+            </thead>
+            <tbody>
+                <tr *ngFor="let hero of heroes">
+                    <td>
+                        {{hero.id}}
+                    </td>
+                    <td>
+                        {{hero.name}}
+                    </td>
+                    <td>
+                        <div class="row">
+                            <button  type="button" 
+                            class="btn btn-outline-info waves-effect
+                            waves-light"
+                            (click)="onEdit(hero)"
+                            >
+                            Edit
+                        </button>
+                        </div>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+</div>
