--- a/src/app/features/heroes-management/heroes-listing/heroes-listing.component.html
+++ b/src/app/features/heroes-management/heroes-listing/heroes-listing.component.html
@@ -1,21 +1,31 @@
-<div >
+<div class="row">
+  <div class="col-md-12">
+    <div class="card navigation_list">
+      <div class="card-body">
+        <ul ngbNav #nav="ngbNav" [(activeId)]="active" class="nav-pills" orientation="horizontal">
+          <li ngbNavItem="dashboard">
+            <a ngbNavLink>Dashboard</a>
+            <ng-template ngbNavContent>
+                <app-heroes-listing-dashboard></app-heroes-listing-dashboard>
+            </ng-template>
+            
+          </li>
+          <li ngbNavItem="table">
+            <a ngbNavLink>Table</a>
+            <ng-template ngbNavContent>
+                <app-heroes-listing-table
+                 [heroes]="heroes"
+                 >
+                </app-heroes-listing-table>
+            </ng-template>
+            
+        </ul>
+      </div>
+    </div>
+  </div>
+</div>
 
-    <ul ngbNav #nav="ngbNav" [(activeId)]="active" class="nav-pills" orientation="horizontal">
-      <li ngbNavItem="dashboard">
-        <a ngbNavLink>Dashboard</a>
-        <ng-template ngbNavContent>
-            <app-heroes-listing-dashboard></app-heroes-listing-dashboard>
-        </ng-template>
-        
-      </li>
-      <li ngbNavItem="table">
-        <a ngbNavLink>Table</a>
-        <ng-template ngbNavContent>
-            <app-heroes-listing-table></app-heroes-listing-table>
-        </ng-template>
-        
-    </ul>
-  
+
+<div>
     <div [ngbNavOutlet]="nav" class="ml-4"></div>
-    
 </div>
