Edit and Sort Flow completed for listing

--- a/src/app/features/heroes-management/hero-details-modal/hero-details-modal.component.html
+++ b/src/app/features/heroes-management/hero-details-modal/hero-details-modal.component.html
@@ -29,4 +29,17 @@
         </div>
 
     </form>
+
+    <div class="row">
+      <div class="col-md-4"></div>
+      <div class="col-md-4 text-center">
+        <button class="btn btn-outline-info waves-effect
+        waves-light"
+        (click)="onSave()"
+        >
+            Save
+        </button>
+      </div>
+      <div class="col-md-4"></div>
+    </div>
 </div>
