--- a/src/app/features/heroes-management/heroes-listing/heroes-listing-dashboard/heroes-listing-dashboard.component.html
+++ b/src/app/features/heroes-management/heroes-listing/heroes-listing-dashboard/heroes-listing-dashboard.component.html
@@ -1,1 +1,17 @@
-<p>heroes-listing-dashboard works!</p>
+<div class="row">
+    <div class="col-md-12">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4" *ngFor="let hero of heroes">
+                    <div class="card hero_card"
+                        (click)="onCardClicked(hero)"
+                    >
+                        <div class="card-body">
+                            {{hero.name}}
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
