Add New Hero In Table Listing

--- a/src/app/features/heroes-management/heroes-listing/heroes-listing-table/heroes-listing-table.component.html
+++ b/src/app/features/heroes-management/heroes-listing/heroes-listing-table/heroes-listing-table.component.html
@@ -35,5 +35,19 @@
                 </tr>
             </tbody>
         </table>
+
+        <div class="row">
+            <div class="col-md-4"></div>
+            <div class="col-md-4 text-center">
+                <button  type="button" 
+                class="btn btn-outline-info waves-effect
+                waves-light item_actions"
+                (click)="onAdd()"
+                >
+                Add
+            </button>
+            </div>
+            <div class="col-md-4"></div>
+        </div>
     </div>
 </div>
