--- a/src/app/features/heroes-management/heroes-listing/heroes-listing.component.html
+++ b/src/app/features/heroes-management/heroes-listing/heroes-listing.component.html
@@ -3,15 +3,15 @@
     <div class="card navigation_list">
       <div class="card-body">
         <ul ngbNav #nav="ngbNav" [(activeId)]="active" class="nav-pills" orientation="horizontal">
-          <li ngbNavItem="dashboard">
-            <a ngbNavLink>Dashboard</a>
+          <li ngbNavItem="dashboard" >
+            <a ngbNavLink id="view_option">Dashboard</a>
             <ng-template ngbNavContent>
                 <app-heroes-listing-dashboard></app-heroes-listing-dashboard>
             </ng-template>
             
           </li>
-          <li ngbNavItem="table">
-            <a ngbNavLink>Table</a>
+          <li ngbNavItem="table" >
+            <a ngbNavLink id="view_option">Table</a>
             <ng-template ngbNavContent>
                 <app-heroes-listing-table
                  [heroes]="heroes"
