--- a/src/app/features/heroes-management/heroes-listing/heroes-listing-table/heroes-listing-table.component.html
+++ b/src/app/features/heroes-management/heroes-listing/heroes-listing-table/heroes-listing-table.component.html
@@ -14,7 +14,8 @@
                     </td>
                     <td>
                         <div class="row">
-                            <button  type="button" 
+                            <button  type="button"
+                            id="editButton"
                             class="btn btn-outline-info waves-effect
                             waves-light item_actions"
                             (click)="onEdit(hero)"
@@ -23,6 +24,7 @@
                         </button>
 
                         <button  type="button" 
+                            id="deleteButton"
                             class="btn btn-outline-info waves-effect
                             waves-light item_actions"
                             (click)="onDelete(hero.id)"
@@ -39,7 +41,8 @@
         <div class="row">
             <div class="col-md-4"></div>
             <div class="col-md-4 text-center">
-                <button  type="button" 
+                <button  type="button"
+                id="addButton"
                 class="btn btn-outline-info waves-effect
                 waves-light item_actions"
                 (click)="onAdd()"
